# auth-1

./: .env  Cargo.toml  sqlx-data.json
migrations/: 20220910001205_create_users.up.sql
src/: context.rs  main.rs  module.rs
src/application/: auth_service.rs
src/domain/: user.rs
src/domain/user/: mod.rs  user.rs  user_repository.rs
src/infra/: mod.rs  user_repository_impl.rs
src/infrastructure/: user_repository_impl.rs
src/lib/: auth.rs  authenticate.rs  config.rs  jwt.rs  jwt_extractor.rs  mod.rs  password_hashing.rs
src/presentation/: mod.rs
src/presentation/users/: registrations.rs  sessions.rs
